--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,67 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .nav-item {
+      @apply relative flex items-center justify-start mx-0 my-0 px-3 h-full font-semibold text-xl hover:text-2xl transition-all duration-150 ease-linear;
+  }
+
+  .button{
+    @apply relative flex items-center justify-center content-center mx-0 my-6 px-3 py-3 h-full font-semibold border-solid border-2 rounded-lg text-xl hover:text-2xl transition-all duration-150 ease-linear;
+  }
+
+  .button-sky{
+    @apply text-sky-200 border-sky-600 hover:text-sky-100 hover:border-4 hover:border-sky-500 transition-all duration-150 ease-linear;
+  }
+
+  .nav-item-sky{
+      @apply text-sky-200 hover:text-sky-100 transition-all duration-150 ease-linear;
+  }
+
+  .nav-item-emerald{
+      @apply text-emerald-200 hover:text-emerald-100 transition-all duration-150 ease-linear;
+  }
+
+  .nav-list{
+      @apply  relative flex flex-col items-start justify-start mx-0 my-0 px-3 w-full h-auto
+  }
+
+  .nav-list-item {
+      @apply relative flex items-center justify-start mx-0 my-0 px-1 py-1 h-full font-semibold text-xl hover:text-2xl transition-all duration-150 ease-linear;
+  }
+
+  .nav-list-item-sky{
+      @apply text-sky-200 hover:text-sky-100 transition-all duration-150 ease-linear;
+  }
+
+  .nav-list-item-emerald{
+      @apply text-emerald-200 hover:text-emerald-100 transition-all duration-150 ease-linear;
+  }
+
+  .nav-items{
+      @apply relative flex items-center justify-start me-0 my-0;
+  }
+
+  .nav-user {
+      @apply relative flex items-center justify-end ms-auto my-0;
+  }
+
+  .nav-current{
+      @apply relative hidden sm:flex items-center justify-center content-center mx-auto my-0 font-semibold text-3xl ;
+  }
+
+  .nav-current-sky{
+      @apply text-sky-200;
+  }
+
+  .nav-current-emerald{
+      @apply text-emerald-200;
+  }
+}
+
 body {
   margin: 0;
-  background-color:#343a40;
   color: #dee2e6;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,3 +78,4 @@ code {
 html, body, #root {
   height: 100%;
 }
+
