--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
     @apply text-sky-200 border-sky-600 hover:text-sky-100 hover:border-4 hover:border-sky-500 transition-all duration-150 ease-linear;
   }
 
+  .button-emerald{
+    @apply text-emerald-200 border-emerald-600 hover:text-emerald-100 hover:border-4 hover:border-emerald-500 transition-all duration-150 ease-linear;
+  }
+
   .nav-item-sky{
       @apply text-sky-200 hover:text-sky-100 transition-all duration-150 ease-linear;
   }
