--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,15 @@
   .nav-current-emerald{
       @apply text-emerald-200;
   }
+
+  .text-input{
+      @apply p-2 bg-slate-950 text-sky-100 border-solid border rounded-lg border-sky-600 focus:border-sky-100 focus:outline-none transition-all duration-150 ease-linear;
+  }
+
+  /* .check-input{
+    relative w-11 h-6 bg-slate-950 peer peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-sky-600 rounded-full peer-checked:after:translate-x-full 
+    rtl:peer-checked:after:translate-x-full peer-checked:after:border-sky-100 after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-slate-950 
+    after:border-sky-600 after:border after:rounded-full after:h-5 after:w-5 peer-checked:bg-sky-600 after:transition-all after:duration-150 after:ease-linear; } */
 }
 
 body {
@@ -82,4 +91,3 @@ code {
 html, body, #root {
   height: 100%;
 }
-
